Fixing whitespace on events page, fixes DEVELOPER-604

--- a/stylesheets/_events.scss
+++ b/stylesheets/_events.scss
@@ -33,7 +33,7 @@
   }
 }
 
-.events {
+.events-listing {
   margin-top: 60px;
 }
 
